<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back0"
    android:orientation="vertical"
    tools:context=".ui.information.InformationScreen">

    <TextView
        android:id="@+id/tv_name_surname_info"
        android:layout_width="173dp"
        android:layout_height="41dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_32sdp"
        android:text="@string/name_and_surname"
        android:textSize="@dimen/_16ssp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_mail"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_48sdp"
        android:hint="@string/mail_info"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_phone"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_city"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/city"
        android:inputType="text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_info"
        android:layout_width="323dp"
        android:layout_height="66dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@color/cardview_light_background"
        android:text="@string/next"
        android:textSize="@dimen/_16ssp" />

</LinearLayout>