<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back0"
    android:orientation="vertical"
    tools:context=".ui.home.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_64sdp"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_name_surname"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_56sdp"
        android:hint="@string/name_and_surname" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_home"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@color/cardview_light_background"
        android:text="@string/next"
        android:textSize="@dimen/_16ssp" />

</LinearLayout>